syntax = "proto3";

package sourcetool.redis.v1;

option go_package = "github.com/trysourcetool/sourcetool/proto/go/redis/v1;redisv1";

message RedisMessage {
  string id = 1;
  bytes payload = 2;
}
